--- a/CouchBettingWMC/package.json
+++ b/CouchBettingWMC/package.json
@@ -31,6 +31,8 @@
   },
   "type": "module",
   "dependencies": {
+    "express": "^4.18.1",
+    "express-openid-connect": "^2.7.2",
     "jquery": "^3.6.0",
     "svelte-modals": "^1.1.0"
   }
