--- a/CouchBettingWMC/package.json
+++ b/CouchBettingWMC/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-openid-connect": "^2.7.2",
+    "firebase": "^9.8.3",
     "jquery": "^3.6.0",
     "svelte-modals": "^1.1.0"
   }
